--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Rushi Technologies - Course Registration</title>
+    <title>Sreejith</title>
  <link href="css/rushi-style.css" rel="stylesheet" type="text/css"/>
 </head>
 <div class="header">
